moved images and fixed spacing in menus

--- a/src/styles/_footer.scss
+++ b/src/styles/_footer.scss
@@ -9,7 +9,7 @@ footer {
         justify-content: flex-end;
     }
 
-    .logo img {
-        filter: brightness(0) saturate(100%) invert(8%) sepia(9%) saturate(277%) hue-rotate(100deg) brightness(94%) contrast(91%);
+    .logo-mask {
+        background-color: var(--active-theme-text);
     }
 }
